# aea

./: CMakeLists.txt  README.md
src/: game_camera.c  game_camera.h  main.c
src/platform/: effect.c  effect.h  file_utils.c  file_utils.h  mesh.c  mesh.h  mesh_primitives.c  mesh_primitives.h  platform.c  platform.h  shader.c  shader.h
src/platform/internal/: platform_internal.h  platform_types.h
